deployment/prod/admin-flex.ingress.yaml
apiVersion: apps/v1
kind: Ingress
metadata:
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
    kubernetes.io/ingress.class: nginx
    kubernetes.io/tls-acme: "true"
    nginx.ingress.kubernetes.io/proxy-body-size: "50m"
  name: admin-flex-ingress
  namespace: prod
spec:
  rules:
  - host: admin-flex.eton.vn
    http:
      paths:
      - backend:
          serviceName: admin-flex-svc
          servicePort: 80
        path: /
  tls:
  - hosts:
    - admin-flex.eton.vn
    secretName: tls-certificate
